--- a/return_form.html
+++ b/return_form.html
@@ -55,7 +55,7 @@
   </div>
 
   <script>
-    const scriptURL = "YOUR_APPS_SCRIPT_WEB_APP_URL_HERE"; // Ganti dengan Apps Script kau
+    const scriptURL = "https://script.google.com/macros/s/AKfycbwXrDkNstIQEPf9n5-6KUTC1OaTeVoUy6MDiDZEs0Ww/dev"; // Ganti dengan Apps Script kau
     const form = document.getElementById("returnForm");
     const msg = document.getElementById("msg");
 
