--- a/index.html
+++ b/index.html
@@ -3,27 +3,97 @@
 <head>
   <meta charset="UTF-8">
   <title>Sistem Pengembalian Barang</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
   <style>
-    body { font-family: Arial, sans-serif; }
-    form { max-width: 400px; margin: auto; }
-    input, button { margin: 8px 0; width: 100%; padding: 8px; }
-    button { background: #2196F3; color: white; border: none; cursor: pointer; }
-    button:hover { background: #1769aa; }
+    body {
+      background: #f7f7f7;
+      font-family: Georgia, serif;
+    }
+    .container {
+      margin-top: 60px;
+      max-width: 500px;
+      background: #fff;
+      border: 2px solid #bdbdbd;
+      border-radius: 12px;
+      padding: 30px 30px 20px 30px;
+      box-shadow: 0 0 20px #dcdcdc;
+    }
+    h1 {
+      text-align: center;
+      font-size: 2rem;
+      color: #1976d2;
+      margin-bottom: 25px;
+      font-family: 'Times New Roman', Times, serif;
+      letter-spacing: 1px;
+    }
+    label {
+      font-weight: bold;
+      font-size: 1rem;
+      color: #333;
+    }
+    .form-control {
+      margin-bottom: 15px;
+      border-radius: 6px;
+      border: 1px solid #bdbdbd;
+      font-size: 1rem;
+      background: #f5f5f5;
+    }
+    .btn-primary {
+      background: #1976d2;
+      border: none;
+      border-radius: 6px;
+      font-size: 1.1rem;
+      padding: 10px 0;
+      width: 100%;
+    }
+    .btn-primary:hover {
+      background: #1565c0;
+    }
+    #result {
+      text-align: center;
+      margin-top: 16px;
+      font-size: 1rem;
+      color: green;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
-  <h1 style="text-align:center;">Sistem Pengembalian Barang</h1>
-  <form id="form-barang">
-    <input id="nama" placeholder="Nama" required>
-    <input id="telefon" placeholder="Telefon" required>
-    <input id="matrik" placeholder="Matrik" required>
-    <input id="universiti" placeholder="Universiti" required>
-    <input id="lokasi" placeholder="Lokasi" required>
-    <input id="tarikh_hantar" type="date" required>
-    <input id="nota" placeholder="Nota">
-    <button type="submit">Hantar</button>
-  </form>
-  <div id="result" style="text-align:center; margin-top:20px;"></div>
+  <div class="container">
+    <h1>Sistem Pengembalian Barang</h1>
+    <form id="form-barang">
+      <div class="form-group">
+        <label for="nama">Nama</label>
+        <input id="nama" class="form-control" required>
+      </div>
+      <div class="form-group">
+        <label for="telefon">Telefon</label>
+        <input id="telefon" class="form-control" required>
+      </div>
+      <div class="form-group">
+        <label for="matrik">Matrik</label>
+        <input id="matrik" class="form-control" required>
+      </div>
+      <div class="form-group">
+        <label for="universiti">Universiti</label>
+        <input id="universiti" class="form-control" required>
+      </div>
+      <div class="form-group">
+        <label for="lokasi">Lokasi</label>
+        <input id="lokasi" class="form-control" required>
+      </div>
+      <div class="form-group">
+        <label for="tarikh_hantar">Tarikh Hantar</label>
+        <input id="tarikh_hantar" type="date" class="form-control" required>
+      </div>
+      <div class="form-group">
+        <label for="nota">Nota</label>
+        <input id="nota" class="form-control">
+      </div>
+      <button type="submit" class="btn btn-primary">Hantar</button>
+    </form>
+    <div id="result"></div>
+  </div>
   <script src="script.js"></script>
 </body>
-</html>
+        </html>
