--- a/index.html
+++ b/index.html
@@ -2,59 +2,89 @@
 <html lang="ms">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sistem Pengembalian Barang</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
   <style>
     body {
-      background: #f7f7f7;
-      font-family: Georgia, serif;
+      background: #fbe3eb;
+      font-family: 'Georgia', serif;
+      margin: 0;
+      padding: 0;
     }
     .container {
-      margin-top: 60px;
-      max-width: 500px;
-      background: #fff;
-      border: 2px solid #bdbdbd;
-      border-radius: 12px;
-      padding: 30px 30px 20px 30px;
-      box-shadow: 0 0 20px #dcdcdc;
+      max-width: 420px;
+      margin: 40px auto 0 auto;
+      background: #fff7fb;
+      border: 2px solid #801336;
+      border-radius: 16px;
+      box-shadow: 0 2px 12px #cfa3b9;
+      padding: 24px 18px 18px 18px;
     }
     h1 {
       text-align: center;
+      color: #801336;
       font-size: 2rem;
-      color: #1976d2;
-      margin-bottom: 25px;
+      margin-bottom: 22px;
       font-family: 'Times New Roman', Times, serif;
       letter-spacing: 1px;
+      text-shadow: 1px 1px 2px #f8bbd0;
     }
     label {
+      color: #801336;
       font-weight: bold;
       font-size: 1rem;
-      color: #333;
+      margin-bottom: 5px;
+      display: block;
     }
     .form-control {
-      margin-bottom: 15px;
-      border-radius: 6px;
-      border: 1px solid #bdbdbd;
+      width: 100%;
+      padding: 8px 10px;
+      border: 1px solid #cfa3b9;
+      border-radius: 7px;
+      background: #fde5ed;
       font-size: 1rem;
-      background: #f5f5f5;
+      margin-bottom: 15px;
+      transition: border .2s;
     }
-    .btn-primary {
-      background: #1976d2;
+    .form-control:focus {
+      border: 1.5px solid #801336;
+      outline: none;
+      background: #fff0f6;
+    }
+    .btn-maroon {
+      background: #801336;
+      color: #fff7fb;
       border: none;
-      border-radius: 6px;
-      font-size: 1.1rem;
+      border-radius: 8px;
       padding: 10px 0;
       width: 100%;
+      font-size: 1.09rem;
+      font-weight: bold;
+      cursor: pointer;
+      box-shadow: 0 2px 8px #cfa3b9;
+      margin-top: 5px;
+      transition: background .2s;
     }
-    .btn-primary:hover {
-      background: #1565c0;
+    .btn-maroon:hover {
+      background: #c72c6c;
     }
     #result {
       text-align: center;
       margin-top: 16px;
       font-size: 1rem;
-      color: green;
+      color: #801336;
       font-weight: bold;
+      letter-spacing: 1px;
+    }
+    @media (max-width: 600px) {
+      .container {
+        max-width: 97vw;
+        padding: 14px 6vw 10px 6vw;
+        margin-top: 18px;
+      }
+      h1 {
+        font-size: 1.3rem;
+      }
     }
   </style>
 </head>
@@ -62,38 +92,31 @@
   <div class="container">
     <h1>Sistem Pengembalian Barang</h1>
     <form id="form-barang">
-      <div class="form-group">
-        <label for="nama">Nama</label>
-        <input id="nama" class="form-control" required>
-      </div>
-      <div class="form-group">
-        <label for="telefon">Telefon</label>
-        <input id="telefon" class="form-control" required>
-      </div>
-      <div class="form-group">
-        <label for="matrik">Matrik</label>
-        <input id="matrik" class="form-control" required>
-      </div>
-      <div class="form-group">
-        <label for="universiti">Universiti</label>
-        <input id="universiti" class="form-control" required>
-      </div>
-      <div class="form-group">
-        <label for="lokasi">Lokasi</label>
-        <input id="lokasi" class="form-control" required>
-      </div>
-      <div class="form-group">
-        <label for="tarikh_hantar">Tarikh Hantar</label>
-        <input id="tarikh_hantar" type="date" class="form-control" required>
-      </div>
-      <div class="form-group">
-        <label for="nota">Nota</label>
-        <input id="nota" class="form-control">
-      </div>
-      <button type="submit" class="btn btn-primary">Hantar</button>
+      <label for="nama">Nama</label>
+      <input id="nama" class="form-control" required>
+
+      <label for="telefon">Telefon</label>
+      <input id="telefon" class="form-control" required>
+
+      <label for="matrik">Matrik</label>
+      <input id="matrik" class="form-control" required>
+
+      <label for="universiti">Universiti</label>
+      <input id="universiti" class="form-control" required>
+
+      <label for="lokasi">Lokasi</label>
+      <input id="lokasi" class="form-control" required>
+
+      <label for="tarikh_hantar">Tarikh Hantar</label>
+      <input id="tarikh_hantar" type="date" class="form-control" required>
+
+      <label for="nota">Nota</label>
+      <input id="nota" class="form-control">
+
+      <button type="submit" class="btn-maroon">Hantar</button>
     </form>
     <div id="result"></div>
   </div>
   <script src="script.js"></script>
 </body>
-        </html>
+</html>
