--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
       border: 3.5px solid #801336;
       border-radius: 22px;
       box-shadow: 0 4px 18px #cfa3b9;
-      padding: 28px 16px 18px 16px;
+      padding: 28px 18px 20px 18px;
+      box-sizing: border-box;
+      /* prevent content overflow */
+      overflow: hidden;
     }
     h1 {
       text-align: center;
@@ -29,6 +32,12 @@
       letter-spacing: 1px;
       text-shadow: 1px 1px 2px #f8bbd0;
     }
+    form {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      width: 100%;
+    }
     label {
       color: #801336;
       font-weight: bold;
@@ -36,7 +45,7 @@
       margin-bottom: 5px;
       display: block;
     }
-    .form-control {
+    .form-control, .form-select {
       width: 100%;
       padding: 8px 10px;
       border: 1.5px solid #cfa3b9;
@@ -45,8 +54,10 @@
       font-size: 1rem;
       margin-bottom: 15px;
       transition: border .2s;
+      box-sizing: border-box;
+      display: block;
     }
-    .form-control:focus {
+    .form-control:focus, .form-select:focus {
       border: 2px solid #801336;
       outline: none;
       background: #fff0f6;
@@ -64,6 +75,8 @@
       box-shadow: 0 2px 8px #cfa3b9;
       margin-top: 5px;
       transition: background .2s;
+      margin-bottom: 0px;
+      box-sizing: border-box;
     }
     .btn-maroon:hover {
       background: #c72c6c;
@@ -77,6 +90,7 @@
       border-radius: 12px;
       background: #fde5ed;
       object-fit: contain;
+      box-sizing: border-box;
     }
     #result {
       text-align: center;
@@ -99,6 +113,8 @@
       box-shadow: 0 1px 4px #dcdcdc;
       cursor: pointer;
       transition: background .2s;
+      box-sizing: border-box;
+      display: block;
     }
     .btn-upload:hover {
       background: #fbe3eb;
@@ -106,11 +122,14 @@
     @media (max-width: 600px) {
       .container {
         max-width: 97vw;
-        padding: 14px 4vw 10px 4vw;
+        padding: 10px 3vw 10px 3vw;
         margin-top: 18px;
       }
       h1 {
         font-size: 1.3rem;
+      }
+      .image-preview {
+        max-width: 95vw;
       }
     }
   </style>
@@ -129,7 +148,12 @@
       <input id="matrik" class="form-control" required>
 
       <label for="universiti">Universiti</label>
-      <input id="universiti" class="form-control" required>
+      <select id="universiti" class="form-select" required>
+        <option value="">-- Pilih Universiti --</option>
+        <option value="UNIMAS">UNIMAS</option>
+        <option value="UITM">UITM</option>
+        <option value="Lain-lain">Lain-lain</option>
+      </select>
 
       <label for="lokasi">Lokasi</label>
       <input id="lokasi" class="form-control" required>
