--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Borang Penghantaran Balik Barang</title>
-  <link rel="stylesheet" href="style.css" />
+ <!-- ✅ Versi CSS untuk bypass cache -->
+  <link rel="stylesheet" href="style.css?v=1.0.1" />
 </head>
 <body>
   <button id="toggleTheme" class="btn-theme">🌗 Tukar Tema</button>
@@ -53,3 +54,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
